# ely

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  default.nix  flake.nix  ideas.md  test.ely
bench/: CMakeLists.txt  gen_file.cpp  gen_src.hpp  lexer.cpp
benchmark/: CMakeLists.txt  lex.cpp
cmake/modules/: AddEly.cmake
include/ely/: arena.h  assert.h  ast.h  ast.hpp  atmosphere.hpp  binding.hpp  buffer.h  buffer.hpp  config.h  context.h  dbg.hpp  defines.h  diagnostic.h  diagnostic.hpp  expander.hpp  ilist.h  ilist.hpp  interner.hpp  lexer.h  lexer.hpp  list.h  list.hpp  location.h  location.hpp  manually_destroy.hpp  maybe_uninit.hpp  memory.hpp  node.h  node.hpp  pair.hpp  parser.hpp  position.hpp  printer.h  printer.hpp  reader.h  reader.hpp  reader2.hpp  runtime.h  scanner.hpp  scope.h  (+25 more)
include/ely/arena/: allocator.hpp  basic.hpp  block.hpp  bump.hpp  constexpr.hpp  dumb_typed.hpp  forever.hpp  growing.hpp  shared.hpp  slab.hpp
include/ely/ast/: ast.hpp  parser.hpp
include/ely/green/: list.hpp  token.hpp
include/ely/io/: chunked_reader.hpp
include/ely/lazy/: value.hpp
include/ely/lex/: lexeme.hpp  lexemes.hpp  lexer.h  lexer.hpp  scanner.hpp  span.hpp  token.def  token.h  token.hpp  tokenizer.hpp  tokens.hpp  traits.hpp
include/ely/memory/: shared_ptr.hpp
include/ely/node/: stx.hpp
include/ely/sema/: scope.hpp  sema.hpp
include/ely/string/: zstring_view.hpp
include/ely/stx/: cont.hpp  context.h  datum.h  datum.hpp  encode.hpp  identifier.h  identifier.hpp  lexer.hpp  lexer2.hpp  list.h  list.hpp  literal.h  literal.hpp  location.hpp  nodes.hpp  parser.h  reader.hpp  scope.hpp  source.h  stx.hpp  stx2.hpp  tape.hpp  tokens.def  tokens.h  tokens.hpp
include/ely/util/: concepts.hpp  cx_or_rt.hpp  dispatch_index.hpp  get_unchecked.hpp  hash.hpp  isa.hpp  optional.hpp  resolve_overload.hpp  traits.hpp  tuple.hpp  union_storage.hpp  uniquer.hpp  variant.hpp  variant_hash.hpp  variant_size.hpp  visit.hpp
include/elyc/: defines.h  lexer.h  reader.h  token.h
include/elypp/: type.hpp  value.hpp
include/mli/: arena.hpp  ast.hpp  lexer.hpp  parser.hpp  string_view.hpp
include/wmc/: lexer.hpp
src/: CMakeLists.txt  arena.cpp  assert.cpp  ast.cpp  ast.hpp  casting.hpp  context.cpp  ely.cpp  ilist.c  lex.hpp  lexer.c  lexer.cpp  lexer.hpp  list.c  main.c  main.cpp  node.cpp  node.hpp  parser.hpp  primitive.cpp  primitive.hpp  printer.c  printer.cpp  ptr.hpp  reader.c  runtime.cpp  scope.cpp  stream.hpp  string.c  string.cpp  token.c  tokens.def  type.cpp  value.cpp  value.hpp
src/ast/: parser.cpp
src/lex/: common.h  lexer.c  lexer.cpp  scan.re  token.c  token.cpp
src/sema/: sema.cpp
src/stx/: cont.h  cont.hpp  datum.c  datum.cpp  encode.h  encode.hpp  identifier.c  identifier.cpp  lexer.c  lexer.cpp  list.c  list.cpp  literal.c  literal.cpp  parser.c  parser.cpp
test/: CMakeLists.txt  arena.cpp  green.cpp  ilist.cpp  interner.cpp  lexer.cpp  memory.cpp  nodes.cpp  pair.cpp  scope.cpp  simd.cpp  storage.cpp  stream.cpp  support.hpp  union.cpp  union_storage.cpp  uniquer.cpp  util.cpp  util.hpp  variant.cpp  vector.cpp
tests/: CMakeLists.txt  arena.cpp  eval.cpp  ilist.cpp  lexer.c  lexer.cpp  parser.cpp
tools/: CMakeLists.txt  driver.cpp  lexer.cpp
